--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,8 +7,9 @@ python-multipart==0.0.6
 pypdf==3.17.4
 
 # AI and monitoring
-anthropic==0.39.0
-langsmith==0.0.87
+anthropic>=0.40.0
+langsmith>=0.1.0
+httpx>=0.27.0
 
 # Utilities
 python-dotenv==1.0.0
